Hammer into users' heads the idea that they must use pcap_datalink().
Note for pcap_loop()/pcap_dispatch(), and for
pcap_next()/pcap_next_ex(), that in order to interpret the packets you
have to know the link-layer header type for the pcap_t, as returned by
pcap_datalink().

Note in all the places we discuss the value returned by pcap_datalink()
that the program *MUST NOT ASSUME* that it will return a particular
value, and specifically note that the Linux "any" device has a
pcap_datalink() value of DLT_LINUX_SLL even if all the network
interfaces on the system happen to have some other link-layer header
type.

--- a/pcap.3pcap.in
+++ b/pcap.3pcap.in
@@ -309,6 +309,19 @@ handle, call
 lists the values it returns and describes the packet formats that
 correspond to those values.
 .PP
+Do
+.B NOT
+assume that the packets for a given capture or ``savefile`` will have
+any given link-layer header type, such as
+.B DLT_EN10MB
+for Ethernet.  For example, the "any" device on Linux will have a
+link-layer header type of
+.B DLT_LINUX_SLL
+even if all devices on the system at the time the "any" device is opened
+have some other data link type, such as
+.B DLT_EN10MB
+for Ethernet.
+.PP
 To obtain the
 .B "FILE\ *"
 corresponding to a
