--- a/pcap_datalink.3pcap.in
+++ b/pcap_datalink.3pcap.in
@@ -42,6 +42,25 @@ It must not be called on a pcap descriptor created by
 .B pcap_create()
 that has not yet been activated by
 .BR pcap_activate() .
+.PP
+.I http://www.tcpdump.org/linktypes.html
+lists the values
+.B pcap_datalink()
+can return and describes the packet formats that
+correspond to those values.
+.PP
+Do
+.B NOT
+assume that the packets for a given capture or ``savefile`` will have
+any given link-layer header type, such as
+.B DLT_EN10MB
+for Ethernet.  For example, the "any" device on Linux will have a
+link-layer header type of
+.B DLT_LINUX_SLL
+even if all devices on the system at the time the "any" device is opened
+have some other data link type, such as
+.B DLT_EN10MB
+for Ethernet.
 .SH RETURN VALUE
 .B pcap_datalink()
 returns the link-layer header type on success and
