use CFLAGS during "make depend"
When libpcap doesn't compile unless configure'd with custom CFLAGS, the
custom value won't be used during [often implicit] "make depend", which
will then fail. Add the missing variable.

--- a/Makefile.in
+++ b/Makefile.in
@@ -742,4 +742,4 @@ releasetar:
 	   rm -rf $$name
 
 depend:	$(GENSRC) $(GENHDR) bpf_filter.c
-	$(MKDEP) -c $(CC) -m $(DEPENDENCY_CFLAG) $(DEFS) $(INCLS) $(SRC)
+	$(MKDEP) -c $(CC) -m $(CFLAGS) $(DEPENDENCY_CFLAG) $(DEFS) $(INCLS) $(SRC)
