--- a/configure.in
+++ b/configure.in
@@ -1465,7 +1465,6 @@ if test "x$enable_bluetooth" != "xno" ; then
 		[
 		  AC_DEFINE(PCAP_SUPPORT_BT, 1, [target host supports Bluetooth sniffing])
 		  BT_SRC=pcap-bt-linux.c
-		  BT_MONITOR_SRC=pcap-bt-monitor-linux.c
 		  AC_MSG_NOTICE(Bluetooth sniffing is supported)
 
 		  #
@@ -1486,6 +1485,26 @@ if test "x$enable_bluetooth" != "xno" ; then
 		    if test $ac_cv_lbl_sockaddr_hci_has_hci_channel = yes ; then
 		      AC_DEFINE(SOCKADDR_HCI_HAS_HCI_CHANNEL,,
 			[if struct sockaddr_hci has hci_channel member])
+
+		      #
+		      # OK, is HCI_CHANNEL_MONITOR defined?
+		      #
+		      AC_MSG_CHECKING(if HCI_CHANNEL_MONITOR is defined)
+		      AC_CACHE_VAL(ac_cv_lbl_hci_channel_monitor_is_defined,
+		      AC_TRY_COMPILE(
+[
+#include <bluetooth/bluetooth.h>
+#include <bluetooth/hci.h>
+],
+			[u_int i = HCI_CHANNEL_MONITOR],
+			ac_cv_lbl_hci_channel_monitor_is_defined=yes,
+			ac_cv_lbl_hci_channel_monitor_is_defined=no))
+		      AC_MSG_RESULT($ac_cv_lbl_hci_channel_monitor_is_defined)
+		      if test $ac_cv_lbl_hci_channel_monitor_is_defined = yes ; then
+			AC_DEFINE(PCAP_SUPPORT_BT_MONITOR,,
+			  [target host supports Bluetooth Monitor])
+			BT_MONITOR_SRC=pcap-bt-monitor-linux.c
+		      fi
 		    fi
 		],
 		AC_MSG_NOTICE(Bluetooth sniffing is not supported; install bluez-lib devel to enable it)
