.travis.yml: install libusb-1.0-0-dev and libdbus-1-dev devel libs

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ compiler:
   - gcc
   - clang
 
+before_script:
+  - sudo apt-get install libusb-1.0-0-dev libdbus-1-dev
+
 script:
   - ./configure
   - make
