--- a/configure.in
+++ b/configure.in
@@ -1348,10 +1348,16 @@ AC_SUBST(DYEXT)
 AC_SUBST(MAN_FILE_FORMATS)
 AC_SUBST(MAN_MISC_INFO)
 
-dnl check for USB sniffing support
-AC_MSG_CHECKING(for USB sniffing support)
-case "$host_os" in
-linux*)
+AC_ARG_ENABLE([usb],
+[AC_HELP_STRING([--enable-usb],[enable nusb support @<:@default=yes, if support available@:>@])],
+    [],
+    [enable_usb=yes])
+
+if test "x$enable_usb" != "xno" ; then
+   dnl check for USB sniffing support
+   AC_MSG_CHECKING(for USB sniffing support)
+   case "$host_os" in
+   linux*)
 	AC_DEFINE(PCAP_SUPPORT_USB, 1, [target host supports USB sniffing])
 	USB_SRC=pcap-usb-linux.c
 	AC_MSG_RESULT(yes)
@@ -1402,10 +1408,11 @@ AC_INCLUDES_DEFAULT
 	    fi
 	fi
 	;;
-*)
+    *)
 	AC_MSG_RESULT(no)
 	;;
 esac
+fi
 AC_SUBST(PCAP_SUPPORT_USB)
 AC_SUBST(USB_SRC)
 
