ask for more warnings during a Travis CI build
.travis.yml: add 'touch .devel configure'

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,6 @@ before_script:
   - sudo apt-get install libusb-1.0-0-dev libdbus-1-dev
 
 script:
+  - touch .devel configure
   - ./configure
   - make -s
