Move the inclusion of config.h to the top of scanner.c
This works around _LARGE_FILES difficulties on AIX. See
http://seclists.org/nmap-dev/2012/q1/459 for example.

This is an alternative to the flex-only solution in #359

--- a/Makefile.in
+++ b/Makefile.in
@@ -443,8 +443,9 @@ libpcap.shareda: $(OBJ)
 libpcap.none:
 
 scanner.c: $(srcdir)/scanner.l
-	@rm -f $@
-	$(srcdir)/runlex.sh $(LEX) -o$@ $<
+	@rm -f $@ $@.bottom
+	$(srcdir)/runlex.sh $(LEX) -o$@.bottom $<
+	cat $@.top $@.bottom > $@
 
 scanner.o: scanner.c tokdefs.h
 	$(CC) $(FULL_CFLAGS) -c scanner.c
