Check whether we have -lusb-1.0 and it has libusb_init().
Don't just check for the libusb header file - apparently at least some
Linux distributions can't install both the 32-bit and 64-bit developer
versions of the libusb library, so you might have the libusb header, and
the library for one bit-width, but not the library for the other
bit-width, so the configure would succeed for the other bit-width but
the build would fail.

--- a/configure.in
+++ b/configure.in
@@ -1528,7 +1528,7 @@ if test "x$enable_canusb" != "xno" ; then
 	dnl check for canusb support
 	case "$host_os" in
 	linux*)
-		AC_CHECK_HEADER(libusb-1.0/libusb.h,
+		AC_CHECK_LIB(usb-1.0, libusb_init,
 		[
 		    AC_DEFINE(PCAP_SUPPORT_CANUSB, 1, [target host supports canusb])
 		    CANUSB_SRC=pcap-canusb-linux.c
