--- a/configure.in
+++ b/configure.in
@@ -1528,12 +1528,17 @@ if test "x$enable_canusb" != "xno" ; then
 	dnl check for canusb support
 	case "$host_os" in
 	linux*)
-		AC_CHECK_LIB(usb-1.0, libusb_init,
+		AC_CHECK_HEADER(libusb-1.0/libusb.h,
 		[
-		    AC_DEFINE(PCAP_SUPPORT_CANUSB, 1, [target host supports canusb])
-		    CANUSB_SRC=pcap-canusb-linux.c
-		    LIBS="-lusb-1.0 -lpthread $LIBS"
-		    AC_MSG_NOTICE(canusb sniffing is supported)
+		    AC_CHECK_LIB(usb-1.0, libusb_init,
+		    [
+			AC_DEFINE(PCAP_SUPPORT_CANUSB, 1, [target host supports canusb])
+			CANUSB_SRC=pcap-canusb-linux.c
+			LIBS="-lusb-1.0 -lpthread $LIBS"
+			AC_MSG_NOTICE(canusb sniffing is supported)
+		    ],
+		    AC_MSG_NOTICE(canusb sniffing is not supported; install libusb1.0 lib devel to enable it)
+		    )
 		],
 		AC_MSG_NOTICE(canusb sniffing is not supported; install libusb1.0 lib devel to enable it)
 		)
