--- a/configure.in
+++ b/configure.in
@@ -1538,7 +1538,7 @@ AC_ARG_ENABLE([canusb],
 if test "x$enable_canusb" != "xno" ; then
 	dnl check for canusb support
 	case "$host_os" in
-	linux*)
+	linux*|uclinux*)
 		AC_CHECK_HEADER(libusb-1.0/libusb.h,
 		[
 		    AC_CHECK_LIB(usb-1.0, libusb_init,
@@ -1548,7 +1548,8 @@ if test "x$enable_canusb" != "xno" ; then
 			LIBS="-lusb-1.0 -lpthread $LIBS"
 			ac_lbl_has_libusb=yes
 		    ],
-		    ac_lbl_has_libusb=no
+		    ac_lbl_has_libusb=no,
+		    -lpthread
 		    )
 		],
 		ac_lbl_has_libusb=no
