odp: add libs and includes search in installed odp directory
Signed-off-by: Maxim Uvarov <maxim.uvarov@linaro.org>

--- a/configure.in
+++ b/configure.in
@@ -703,6 +703,8 @@ AC_HELP_STRING([--with-odp],[include ODP support]),
 [
 	if test ! "x$withval" = "xno" ; then
 		want_odp=yes
+		ODP_INCLS="-I$withval/include -I$withval/include/helper"
+		LIBS="$LIBS -L$withval/lib"
 	fi
 ],[
 	want_odp=no
