--- a/configure.in
+++ b/configure.in
@@ -1624,64 +1624,73 @@ if test "x$enable_dbus" != "xno"; then
 
 		darwin*)
 			#
+			# We don't support D-Bus sniffing on OS X; see
+			#
 			# https://bugs.freedesktop.org/show_bug.cgi?id=74029
 			#
+			# The user requested it, so fail.
+			#
 			AC_MSG_ERROR([Due to freedesktop.org bug 74029, D-Bus capture support is not available on OS X])
-			;;
 		esac
 	else		
 		case "$host_os" in
 
 		darwin*)
 			#
+			# We don't support D-Bus sniffing on OS X; see
+			#
 			# https://bugs.freedesktop.org/show_bug.cgi?id=74029
 			#
+			# The user dind't explicitly request it, so just
+			# silently refuse to enable it.
+			#
+			enable_dbus="no"
 			;;
-
-		*)
-			AC_CHECK_PROG([PKGCONFIG], [pkg-config], [pkg-config], [no])
-			if test "x$PKGCONFIG" != "xno"; then
-				AC_MSG_CHECKING([for D-Bus])
-				if "$PKGCONFIG" dbus-1; then
-					AC_MSG_RESULT([yes])
-					DBUS_CFLAGS=`"$PKGCONFIG" --cflags dbus-1`
-					DBUS_LIBS=`"$PKGCONFIG" --libs dbus-1`
-					save_CFLAGS="$CFLAGS"
-					save_LIBS="$LIBS"
-					CFLAGS="$CFLAGS $DBUS_CFLAGS"
-					LIBS="$LIBS $DBUS_LIBS"
-					AC_MSG_CHECKING(whether the D-Bus library defines dbus_connection_read_write)
-					AC_TRY_LINK(
-					    [#include <string.h>
-
-					     #include <time.h>
-					     #include <sys/time.h>
-
-					     #include <dbus/dbus.h>],
-					    [return dbus_connection_read_write(NULL, 0);],
-					    [
-						AC_MSG_RESULT([yes])
-						AC_DEFINE(PCAP_SUPPORT_DBUS, 1, [support D-Bus sniffing])
-						DBUS_SRC=pcap-dbus.c
-						V_INCLS="$V_INCLS $DBUS_CFLAGS"
-					    ],
-					    [
-						AC_MSG_RESULT([no])
-						if test "x$enable_dbus" = "xyes"; then
-						    AC_MSG_ERROR([--enable-dbus was given, but the D-Bus library doesn't define dbus_connection_read_write()])
-						fi
-						LIBS="$save_LIBS"
-					     ])
-					CFLAGS="$save_CFLAGS"
-				else
-					AC_MSG_RESULT([no])
-					if test "x$enable_dbus" = "xyes"; then
-						AC_MSG_ERROR([--enable-dbus was given, but the dbus-1 package is not installed])
-					fi
-				fi
-			fi
-			;;	
 		esac
+	fi
+fi
+
+if test "x$enable_dbus" != "xno"; then
+	AC_CHECK_PROG([PKGCONFIG], [pkg-config], [pkg-config], [no])
+	if test "x$PKGCONFIG" != "xno"; then
+		AC_MSG_CHECKING([for D-Bus])
+		if "$PKGCONFIG" dbus-1; then
+			AC_MSG_RESULT([yes])
+			DBUS_CFLAGS=`"$PKGCONFIG" --cflags dbus-1`
+			DBUS_LIBS=`"$PKGCONFIG" --libs dbus-1`
+			save_CFLAGS="$CFLAGS"
+			save_LIBS="$LIBS"
+			CFLAGS="$CFLAGS $DBUS_CFLAGS"
+			LIBS="$LIBS $DBUS_LIBS"
+			AC_MSG_CHECKING(whether the D-Bus library defines dbus_connection_read_write)
+			AC_TRY_LINK(
+			    [#include <string.h>
+
+			     #include <time.h>
+			     #include <sys/time.h>
+
+			     #include <dbus/dbus.h>],
+			    [return dbus_connection_read_write(NULL, 0);],
+			    [
+				AC_MSG_RESULT([yes])
+				AC_DEFINE(PCAP_SUPPORT_DBUS, 1, [support D-Bus sniffing])
+				DBUS_SRC=pcap-dbus.c
+				V_INCLS="$V_INCLS $DBUS_CFLAGS"
+			    ],
+			    [
+				AC_MSG_RESULT([no])
+				if test "x$enable_dbus" = "xyes"; then
+				    AC_MSG_ERROR([--enable-dbus was given, but the D-Bus library doesn't define dbus_connection_read_write()])
+				fi
+				LIBS="$save_LIBS"
+			     ])
+			CFLAGS="$save_CFLAGS"
+		else
+			AC_MSG_RESULT([no])
+			if test "x$enable_dbus" = "xyes"; then
+				AC_MSG_ERROR([--enable-dbus was given, but the dbus-1 package is not installed])
+			fi
+		fi
 	fi
 	AC_SUBST(PCAP_SUPPORT_DBUS)
 	AC_SUBST(DBUS_SRC)
