--- a/.travis.yml
+++ b/.travis.yml
@@ -55,4 +55,7 @@ before_script:
 script:
   - if [ "$COVERITY_SCAN_BRANCH" != 1 ]; then touch .devel configure; fi
   - if [ "$COVERITY_SCAN_BRANCH" != 1 ]; then ./configure; fi
-  - if [ "$COVERITY_SCAN_BRANCH" != 1 ]; then make -s; fi
+  - if [ "$COVERITY_SCAN_BRANCH" != 1 ]; then make -s all findalldevstest; fi
+ 
+after_script:
+  - if [ "$COVERITY_SCAN_BRANCH" != 1 ]; then ./findalldevstest; fi
