--- a/.travis.yml
+++ b/.travis.yml
@@ -56,4 +56,5 @@ script:
   - if [ "$COVERITY_SCAN_BRANCH" != 1 ]; then touch .devel configure; fi
   - if [ "$COVERITY_SCAN_BRANCH" != 1 ]; then ./configure; fi
   - if [ "$COVERITY_SCAN_BRANCH" != 1 ]; then make -s all findalldevstest; fi
+  - if [ "$COVERITY_SCAN_BRANCH" != 1 ]; then sudo PATH=$PATH make install; fi
   - if [ "$COVERITY_SCAN_BRANCH" != 1 ]; then ./findalldevstest; fi
