--- a/pcap_dump_open.3pcap.in
+++ b/pcap_dump_open.3pcap.in
@@ -68,9 +68,10 @@ are used as the link-layer type and snapshot length of the output file.
 .B pcap_dump_open_append()
 is like
 .B pcap_dump_open
-but, if the file already exists, and is a pcap file with the same byte
-order as the host opening the file, and has the same time stamp
-precision, link-layer header type, and snapshot length as
+but does not create the file if it does not exist and, if it does
+already exist, and is a pcap file with the same byte order as the host
+opening the file, and has the same time stamp precision, link-layer
+header type, and snapshot length as
 .IR p ,
 it will write new packets at the end of the file.
 .SH RETURN VALUES
