--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,7 @@ pcap_open_dead.3pcap
 pcap_open_offline.3pcap
 pcap_set_tstamp_precision.3pcap
 pcap_set_tstamp_type.3pcap
-scanner.c
+scanner.c*
 scanner.h
 selpolltest
 tokdefs.h
