Makefile.in: Fix failed build from release archive
The error message was:
cat: scanner.c.top: No such file or directory

--- a/Makefile.in
+++ b/Makefile.in
@@ -332,6 +332,7 @@ EXTRA_DIST = \
 	pcap-usb-linux.h \
 	pcap-win32.c \
 	runlex.sh \
+	scanner.c.top \
 	scanner.l \
 	Win32/Include/Gnuc.h \
 	Win32/Include/addrinfo.h \
