--- a/configure.in
+++ b/configure.in
@@ -148,6 +148,12 @@ struct rtentry;
 #include <net/if.h>])
 fi
 
+case "$host_os" in
+linux*)
+	AC_CHECK_HEADERS(linux/sockios.h linux/if_bonding.h,,,[#include <sys/socket.h>])
+	;;
+esac
+
 AC_LBL_FIXINCLUDES
 
 AC_CHECK_FUNCS(strerror strlcpy)
