--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ Makefile
 *.o
 bpf_filter.c
 capturetest
+can_set_rfmon_test
 config.h
 config.log
 config.cache
@@ -40,6 +41,7 @@ pcap_open_offline.3pcap
 pcap_set_tstamp_precision.3pcap
 pcap_set_tstamp_type.3pcap
 scanner.c
+scanner.c.bottom
 scanner.h
 selpolltest
 tokdefs.h
