Fix check for <linux/if_bonding.h>.
<linux/if_bonding.h> may require <linux/if.h>.

--- a/configure.in
+++ b/configure.in
@@ -150,7 +150,11 @@ fi
 
 case "$host_os" in
 linux*)
-	AC_CHECK_HEADERS(linux/sockios.h linux/if_bonding.h,,,[#include <sys/socket.h>])
+	AC_CHECK_HEADERS(linux/sockios.h linux/if_bonding.h,,,
+	[
+#include <sys/socket.h>
+#include <linux/if.h>
+	])
 	;;
 esac
 
