configure.in: fix detect of if_bonding.h on uclinux
noMMU Linux (uClinux) is also Linux

--- a/configure.in
+++ b/configure.in
@@ -149,7 +149,7 @@ struct rtentry;
 fi
 
 case "$host_os" in
-linux*)
+linux*|uclinux*)
 	AC_CHECK_HEADERS(linux/sockios.h linux/if_bonding.h,,,
 	[
 #include <sys/socket.h>
