--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+sudo: false
 language: c
 
 os:
@@ -38,6 +39,11 @@ addons:
     build_command: make
     # Pattern to match selecting branches that will run analysis
     branch_pattern: coverity_scan
+  apt:
+    packages:
+      - libusb-1.0-0-dev
+      - libdbus-1-dev
+      - libbluetooth-dev
 
 git:
   quiet: true
@@ -45,16 +51,14 @@ git:
 before_install:
   - uname -a
   - date
-  - if [ "$TRAVIS_OS_NAME" = linux ]; then sudo apt-get -qq update; fi
 
 install:
-  - if [ "$TRAVIS_OS_NAME" = linux ]; then sudo apt-get -qq install libusb-1.0-0-dev libdbus-1-dev libbluetooth-dev; fi
 
 before_script:
 
 script:
   - if [ "$COVERITY_SCAN_BRANCH" != 1 ]; then touch .devel configure; fi
-  - if [ "$COVERITY_SCAN_BRANCH" != 1 ]; then ./configure; fi
+  - if [ "$COVERITY_SCAN_BRANCH" != 1 ]; then ./configure --prefix=/tmp; fi
   - if [ "$COVERITY_SCAN_BRANCH" != 1 ]; then make -s all findalldevstest; fi
-  - if [ "$COVERITY_SCAN_BRANCH" != 1 ]; then sudo PATH=$PATH make install; fi
+  - if [ "$COVERITY_SCAN_BRANCH" != 1 ]; then PATH=$PATH make install; fi
   - if [ "$COVERITY_SCAN_BRANCH" != 1 ]; then ./findalldevstest; fi
