Travis: Install 'libnl-genl-3-dev' library

--- a/.travis.yml
+++ b/.travis.yml
@@ -44,6 +44,7 @@ addons:
       - libusb-1.0-0-dev
       - libdbus-glib-1-dev
       - libbluetooth-dev
+      - libnl-genl-3-dev
 
 git:
   quiet: true
