Travis: Restore build of D-Bus code in container-based infrastructure
This is a workaround for 'Disallowing packages: libdbus-1-dev'.
(Currently, 'libdbus-1-dev' is not in the apt package whitelist)

--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ addons:
   apt:
     packages:
       - libusb-1.0-0-dev
-      - libdbus-1-dev
+      - libdbus-glib-1-dev
       - libbluetooth-dev
 
 git:
